fix(core): fix align for the label in the CheckBox

--- a/packages/core/src/elements/Checkbox/FeCheckbox.scss
+++ b/packages/core/src/elements/Checkbox/FeCheckbox.scss
@@ -33,6 +33,7 @@
 
   .fe-checkbox__label {
     vertical-align: middle;
+    margin: 0;
   }
 
   .fe-checkbox__input {
